kubernetes/cluster/media/invidious/invidious.yaml
# Service: Invidious
# Ingress: yt.brhd.io
# Label: app.kubernetes.io/name: invidious
---
apiVersion: v1
kind: Service
metadata:
  name: invidious
  namespace: media
  labels:
    app.kubernetes.io/name: invidious
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: invidious
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
  namespace: media
  labels:
    app.kubernetes.io/name: invidious
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: invidious
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: media
      labels:
        app.kubernetes.io/name: invidious
    spec:
      restartPolicy: Always
      containers:
        - name: invidious
#          image: quay.io/invidious/invidious:latest-arm64
          image: quay.io/invidious/invidious:latest
          resources:
            requests:
              memory: 200Mi
              cpu: 200m
            limits:
              memory: 512Mi
          ports:
            - containerPort: 3000
      nodeSelector:
        beta.kubernetes.io/arch: amd64
#        beta.kubernetes.io/arch: arm64
